--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
